# market-sentiment-portfolio

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
app/: streamlit_app.py
data/: warehouse.duckdb
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: mart_daily_sentiment.sql  mart_ticker_heatmap.sql  schema.yml
dbt/models/staging/: schema.yml  stg_news.sql  stg_ticker_sentiment.sql
scripts/: run_extract.ps1  run_transform.ps1
src/extract/: client.py  ingest_news.py
src/market_sentiment_portfolio/: __init__.py
src/market_sentiment_portfolio/extract/: __init__.py  client.py  ingest_news.py
src/market_sentiment_portfolio/utils/: __init__.py  io.py  rate_limit.py
src/utils/: io.py  rate_limit.py
tests/: test_ingest_news.py
