[project]
name = "market-sentiment-portfolio"
version = "0.1.0"
description = "Alpha Vantage News Sentiment → DuckDB → dbt → Streamlit"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "duckdb>=1.0.0",
  "pandas>=2.1",
  "pyarrow>=15.0",
  "python-dateutil>=2.8",
  "tqdm>=4.66",
  "dbt-duckdb>=1.8.0",
  "streamlit>=1.38",
  "altair>=5.1",
]

[tool.dbt]